--- a/style.css
+++ b/style.css
@@ -66,12 +66,13 @@ main {
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 0 4rem;
 }
 
 .card {
     background-color: var(--clr--white);
     border-radius: 10px;
-    padding: 3.6rem;
+    padding: 5rem;
     max-width: 55rem;
 }
 
@@ -96,9 +97,16 @@ h1 {
 
 .subscribe {
     display: flex;
+    flex-direction: column;
     gap: 2rem;
     align-items: center;
     margin-bottom: 1rem;
+}
+
+@media (min-width: 50rem) {
+    .subscribe {
+        flex-direction: row;
+    }
 }
 
 input[type="email"] {
