--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ main {
 .card {
     background-color: var(--clr--white);
     border-radius: 10px;
-    padding: 5rem;
+    padding: 3rem;
     max-width: 55rem;
 }
 
@@ -91,8 +91,10 @@ h1 {
     display: none;
 }
 
-.form {
-    padding: 1rem;
+@media(min-width: 50rem) {
+    .form {
+        padding: 0 4rem;
+    }
 }
 
 .subscribe {
