--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ body {
 
 main {
     background-color: var(--clr--light);
+    background-color: red;
     min-height: 100svh;
     display: flex;
     flex-direction: column;
